syntax = "proto3";

package user_login;

option go_package = "./protoc";

message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginResponse {
  int64 states = 1;
  UserInfo userInfo = 2;
}

message UserInfo {
  int64 Id = 1;
  string user_name = 2;
  int64 is_member = 3;
}

service UserLogin {
  rpc userLogin (LoginRequest) returns (LoginResponse);
}



